Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Closed_Lost_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Oppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed Lost Oppty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closed Lost Oppty</relationshipLabel>
    <relationshipName>ClosedLost_Oppty</relationshipName>
    <type>Lookup</type>
</CustomField>