Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Closed_Won_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Oppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed Won Oppty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closed Won Oppty</relationshipLabel>
    <relationshipName>ClosedWon_Oppty</relationshipName>
    <type>Lookup</type>
</CustomField>