Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Commision__c.field-meta.xml
<CustomField>
    <fullName>Commision__c</fullName>
    <label>Commision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>