Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Opportunity Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>