Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Opportunity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Opportunities</relationshipLabel>
    <relationshipName>Open_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>