Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Order_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Order_at_Risk__c</fullName>
    <label>Order At Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>