Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Product_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Product_Portfolio__c</fullName>
    <description>Field to display the name of the Product Portfolio (Pricebook) on the Opportunity detail for reporting purposes.</description>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select the Product Portfolio by adding a Product to the Opportunity</inlineHelpText>
    <label>Product Portfolio</label>
    <type>Text</type>
</CustomField>