Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/radius__c.field-meta.xml
<CustomField>
    <fullName>radius__c</fullName>
    <label>radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>