Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>980X_ＰＣＳ営業本部</fullName>
            </value>
            <value>
                <fullName>981X_クリニカルシステム営業技術Ｇｒ</fullName>
            </value>
            <value>
                <fullName>982X_ＰＣＳ東日本リージョン</fullName>
            </value>
            <value>
                <fullName>983X_ＭＩＣ販売部</fullName>
            </value>
            <value>
                <fullName>984X_ＰＣＳ東京リージョン</fullName>
            </value>
            <value>
                <fullName>985X_ＭＳモニタＧｒ</fullName>
            </value>
            <value>
                <fullName>986X_ＰＣＳ中部リージョン</fullName>
            </value>
            <value>
                <fullName>987X_ＰＣＳ関西リージョン</fullName>
            </value>
            <value>
                <fullName>988X_ＰＣＳ中四国リージョン</fullName>
            </value>
            <value>
                <fullName>989X_ＰＣＳ九州リージョン</fullName>
            </value>
            <value>
                <fullName>990X_ＬＣＳ営業部</fullName>
            </value>
            <value>
                <fullName>991X_ＬＣＳ北海道リージョン</fullName>
            </value>
            <value>
                <fullName>992X_ＬＣＳ東北リージョン</fullName>
            </value>
            <value>
                <fullName>993X_ＬＣＳ関東リージョン</fullName>
            </value>
            <value>
                <fullName>994X_ＬＣＳ東京リージョン</fullName>
            </value>
            <value>
                <fullName>996X_ＬＣＳ中部リージョン</fullName>
            </value>
            <value>
                <fullName>997X_ＬＣＳ関西リージョン</fullName>
            </value>
            <value>
                <fullName>998X_ＬＣＳ中四国リージョン</fullName>
            </value>
            <value>
                <fullName>999X_ＬＣＳ九州リージョン</fullName>
            </value>
            <value>
                <fullName>99AX_ＭＩＣ販売部</fullName>
            </value>
            <value>
                <fullName>A001_営業本部</fullName>
            </value>
            <value>
                <fullName>A100_北海道支社</fullName>
            </value>
            <value>
                <fullName>A150_東北支社</fullName>
            </value>
            <value>
                <fullName>A200_関東支社</fullName>
            </value>
            <value>
                <fullName>A300_東京統括支社</fullName>
            </value>
            <value>
                <fullName>A400_中部支社</fullName>
            </value>
            <value>
                <fullName>A500_関西支社</fullName>
            </value>
            <value>
                <fullName>A600_中四国支社</fullName>
            </value>
            <value>
                <fullName>A700_九州支社</fullName>
            </value>
            <value>
                <fullName>A799_GoldSeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>