Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/RoomNo__c.field-meta.xml
<CustomField>
    <fullName>RoomNo__c</fullName>
    <label>RoomNo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>