Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Test_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Number__c</fullName>
    <label>Test Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>