Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AU - Australia</fullName>
            </value>
            <value>
                <fullName>AU - NSW-ACT</fullName>
            </value>
            <value>
                <fullName>AU - QLD</fullName>
            </value>
            <value>
                <fullName>AU - SA-NT</fullName>
            </value>
            <value>
                <fullName>AU - VIC-TAS</fullName>
            </value>
            <value>
                <fullName>AU - WA</fullName>
            </value>
            <value>
                <fullName>BN - Brunei Darussalam</fullName>
            </value>
            <value>
                <fullName>BT-Bhutan</fullName>
            </value>
            <value>
                <fullName>CA - Central</fullName>
            </value>
            <value>
                <fullName>CA - East</fullName>
            </value>
            <value>
                <fullName>CA - West</fullName>
            </value>
            <value>
                <fullName>CE_Austria</fullName>
            </value>
            <value>
                <fullName>CE_Central_Zone</fullName>
            </value>
            <value>
                <fullName>CE_North_Zone</fullName>
            </value>
            <value>
                <fullName>CE_South_Zone</fullName>
            </value>
            <value>
                <fullName>CE_Switzerland</fullName>
            </value>
            <value>
                <fullName>France_South</fullName>
            </value>
            <value>
                <fullName>ID - Indonesia</fullName>
            </value>
            <value>
                <fullName>IN - Bangladesh</fullName>
            </value>
            <value>
                <fullName>IN - East</fullName>
            </value>
            <value>
                <fullName>IN - North</fullName>
            </value>
            <value>
                <fullName>IN - South</fullName>
            </value>
            <value>
                <fullName>IN - Sri Lanka</fullName>
            </value>
            <value>
                <fullName>IN - West</fullName>
            </value>
            <value>
                <fullName>KH - Cambodia</fullName>
            </value>
            <value>
                <fullName>KR - Channel</fullName>
            </value>
            <value>
                <fullName>KR - KAM</fullName>
            </value>
            <value>
                <fullName>KR - MDx</fullName>
            </value>
            <value>
                <fullName>KR - ZONE</fullName>
            </value>
            <value>
                <fullName>LA - Laos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>